# money-talks

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml.example
src/: auth.py  config.py  date_utils.py  db.py  fetch_fx_rates.py  fetch_yfinance.py  helper.py  money_talks.py
src/components/: add_transaction.py
src/models/: actions.py  transaction.py
tabs/: dividends.py  holdings.py  overview.py  returns.py  transactions.py
