[project]
name = "money-talks"
requires-python = ">=3.12"

[tool.pylint.main]
py-version = "3.12"

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "broad-exception-caught",
    "duplicate-code",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.imports]
known-third-party = [
    "streamlit",
    "pandas",
    "pydantic",
    "sqlalchemy",
    "dotenv",
    "yfinance",
    "plotly",
    "openpyxl",
    "psycopg2",
    "tqdm",
    "requests",
]
